--- a/src/main/resources/com/example/ui/fxml/barsik-view.fxml
+++ b/src/main/resources/com/example/ui/fxml/barsik-view.fxml
@@ -1,17 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.ui.controllers.ContractController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.ui.controllers.UserInterfaceController">
    <children>
       <VBox prefHeight="500.0" prefWidth="300.0" style="-fx-background-color: #FF0000;">
          <children>
@@ -39,13 +34,13 @@
             <TableView fx:id="table" prefHeight="400.0" prefWidth="560.0">
                <columns>
                   <TableColumn fx:id="id" maxWidth="3000.0" prefWidth="50.0" text="ID" />
-                  <TableColumn fx:id="start" prefWidth="120.0" text="ДАТА СОЗДАНИЯ" />
-                  <TableColumn fx:id="number" prefWidth="150.0" text="НОМЕР ДОГОВОРА" />
-                  <TableColumn fx:id="update" prefWidth="130.0" text="ДАТА ОБНОВЛЕНИЯ" />
-                  <TableColumn fx:id="checkBox" prefWidth="110.0" text="АКТУАЛЬНОСТЬ" />
+                  <TableColumn fx:id="startDate" prefWidth="120.0" text="ДАТА СОЗДАНИЯ" />
+                  <TableColumn fx:id="contractNumber" prefWidth="150.0" text="НОМЕР ДОГОВОРА" />
+                  <TableColumn fx:id="updateDate" prefWidth="130.0" text="ДАТА ОБНОВЛЕНИЯ" />
+                  <TableColumn fx:id="checkBox" prefWidth="110.0" text="АКТУАЛЬНОСТЬ*" />
                </columns>
             </TableView>
-            <Button onAction="#onHelloButtonClick" style="-fx-background-color: #FF0000;" text="АКТУАЛЬНОСТЬ">
+            <Button onAction="#onHelloButtonClick" style="-fx-background-color: #FF0000;" text="ПОЛУЧИТЬ СПИСОК ДОГОВОРОВ">
                <font>
                   <Font name="Verdana" size="14.0" />
                </font>
